[package]
name = "ansi-cut"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strip-ansi-escapes = "0.1.0"
ansi-parser = "0.8.0"

[dev-dependencies]
owo-colors = "2.0.0"
